# xdg-desktop-portal-test

./: README.md  meson.build
data/: meson.build  org.freedesktop.portal.WindowActivity.xml
src/: meson.build  portal.c
tools/: dbustest.sh
